<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/Que2_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        app:cardCornerRadius="@dimen/corner_radius">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="@dimen/padding_16"
            android:text="@string/ques_2"
            android:textSize="@dimen/textSize_16" />

    </android.support.v7.widget.CardView>

    <RadioGroup
        android:id="@+id/Que2_Radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Que2_CardView"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@color/gray_50"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingLeft="@dimen/padding_16"
            android:text="@string/que2_op1" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingLeft="@dimen/padding_16"
            android:text="@string/que2_op2" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingLeft="@dimen/padding_16"
            android:text="@string/que2_op3" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingLeft="@dimen/padding_16"
            android:text="@string/que2_op4" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/Que2_Radio"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@color/gray_400" />
</RelativeLayout>
