<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/Que5_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        app:cardCornerRadius="@dimen/corner_radius">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="@dimen/padding_16"
            android:text="@string/ques_5"
            android:textSize="@dimen/textSize_16" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/Que5_Options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Que5_CardView"
        android:layout_margin="@dimen/margin_8"
        android:paddingLeft="@dimen/padding_16"
        android:paddingRight="@dimen/padding_16"
        app:cardCornerRadius="@dimen/corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/Que5_CB1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@color/gray_50"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/que5_op1" />

            <CheckBox
                android:id="@+id/Que5_CB2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@color/gray_50"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/que5_op2" />

            <CheckBox
                android:id="@+id/Que5_CB3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@color/gray_50"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/que5_op3" />

            <CheckBox
                android:id="@+id/Que5_CB4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@color/gray_50"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/que5_op4" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/Que5_Options"
        android:layout_marginLeft="@dimen/margin_8"
        android:layout_marginRight="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_16"
        android:background="@color/gray_400" />
</RelativeLayout>
