<?xml version="1.0" encoding="utf-8" ?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/FooterView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:orientation="vertical">

            <include
                layout="@layout/ques_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8" />

            <include
                layout="@layout/ques_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8" />

            <include
                layout="@layout/ques_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8" />

            <include
                layout="@layout/ques_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8" />

            <include
                layout="@layout/ques_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8" />

            <include
                layout="@layout/ques_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8" />

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/FooterView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/Footer"
        android:background="@color/black" />

    <Button
        android:id="@+id/Footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_8"
        android:onClick="reset"
        android:paddingEnd="@dimen/padding_16"
        android:paddingStart="@dimen/padding_16"
        android:text="@string/reset" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_16"
        android:contentDescription="@string/dogImgDesc"
        android:src="@drawable/dog" />

    <Button
        android:id="@+id/ScoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_16"
        android:onClick="submit"
        android:paddingEnd="@dimen/padding_16"
        android:paddingStart="@dimen/padding_16"
        android:text="@string/score" />

</RelativeLayout>